[package]
name = "prost-types"
version = "0.11.9"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-types"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.60"

[lib]
doctest = false

[features]
default = ["std"]
std = ["prost/std"]

# Support conversion between Timestamp and ::time::OffsetDateTime
time-conversions = ["time"]

[dependencies]
prost = { version = "0.11.9", path = "..", default-features = false, features = ["prost-derive"] }
time = { version = "0.3", optional = true, default-features = false, features = ["large-dates"] }

[dev-dependencies]
proptest = "1"
time = { version = "0.3", default-features = false, features = ["macros"] }
