[package]
name = "prost-types"
version = "0.11.1"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-types"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[features]
default = ["std"]
std = ["prost/std"]

# Support conversion between Timestamp and chrono::DateTime
chrono-conversions = ["chrono"]
# Derive serde traits for the structs defined in this crate (unless they contain optional fields)
serde-derive = ["serde"]

[dependencies]
bytes = { version = "1", default-features = false }
prost = { version = "0.11", path = "..", default-features = false, features = ["prost-derive"] }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
proptest = "1"
