[package]
name = "prost-types"
readme = "README.md"
description = "Prost definitions of Protocol Buffers well known types."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
time = ["dep:time"]
std = ["prost/std", "time?/std"]

[dependencies]
prost = { version = "0.13.1", path = "../prost", default-features = false, features = ["prost-derive"] }
time = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
proptest = "1"
